--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,109 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/main_btn_exam01"
-            android:text="@string/main_btn_exam01"
-            android:onClick="btnChecked"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/main_btn_exam01"
+                android:text="@string/main_btn_exam01"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam02"
+                android:text="@string/main_btn_exam02"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam03"
+                android:text="@string/main_btn_exam03"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam04"
+                android:text="@string/main_btn_exam04"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam05"
+                android:text="@string/main_btn_exam05"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam06"
+                android:text="@string/main_btn_exam06"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam07"
+                android:text="@string/main_btn_exam07"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam08"
+                android:text="@string/main_btn_exam08"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam09"
+                android:text="@string/main_btn_exam09"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam10"
+                android:text="@string/main_btn_exam10"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam11"
+                android:text="@string/main_btn_exam11"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_exam12"
+                android:text="@string/main_btn_exam12"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_prac01"
+                android:text="@string/main_btn_prac01"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/main_btn_prac02"
+                android:text="@string/main_btn_prac02"
+                android:onClick="btnChecked"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
